fix: Regression showing link text within social networks icons on iOS

--- a/assets/scss/components/_social-networks.scss
+++ b/assets/scss/components/_social-networks.scss
@@ -49,8 +49,6 @@
   }
 
   @supports (gap: my.$gutter) {
-    display: flex;
-
     padding: 0;
 
     :first-child > &,
